--- a/app/shared/anonymousToolbar/anonymousToolbar.html
+++ b/app/shared/anonymousToolbar/anonymousToolbar.html
@@ -20,18 +20,18 @@
                     <div class="dropdown">  
                   <img id="catIco" data-toggle="dropdown" src="/assets/img/icons/Categories.png" class="img-responsive bb-img-hov" width="32" height="32" >
                   <div class="dropdown-menu menuDropDown">
-                         <a class="dropdown-item menu-item" href="#">Action and Adventure</a>
-                         <a class="dropdown-item menu-item" href="#">Autobiographies and Biographies</a>
-                         <a class="dropdown-item menu-item" href="#">Business and Economics</a>
-                         <a class="dropdown-item menu-item" href="#">Computing</a>
-                         <a class="dropdown-item menu-item" href="#">Healthy Living</a>
-                         <a class="dropdown-item menu-item" href="#">Humour</a>
-                         <a class="dropdown-item menu-item" href="#">Personal Development</a>
-                         <a class="dropdown-item menu-item" href="#">Romance</a>
-                         <a class="dropdown-item menu-item" href="#">Science and Technology</a>
-                         <a class="dropdown-item menu-item" href="#">Science Fiction</a>
-                         <a class="dropdown-item menu-item" href="#">Sports</a>
-                         <a class="dropdown-item menu-item" href="#">Travel</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Action and Adventure</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Autobiographies and Biographies</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Business and Economics</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Computing</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Healthy Living</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Humour</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Personal Development</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Romance</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Science and Technology</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Science Fiction</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Sports</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Travel</a>
                      </div>
                     </div>
               </div>
@@ -39,18 +39,18 @@
                     <div class="dropdown">
                     <a id="catDropdown" href="" class="float-right bb-header-hyperlinks dropdown-toggle" data-toggle="dropdown">Categories</a>  
                      <div class="dropdown-menu menuDropDown">
-                         <a class="dropdown-item menu-item" href="#">Action and Adventure</a>
-                         <a class="dropdown-item menu-item" href="#">Autobiographies and Biographies</a>
-                         <a class="dropdown-item menu-item" href="#">Business and Economics</a>
-                         <a class="dropdown-item menu-item" href="#">Computing</a>
-                         <a class="dropdown-item menu-item" href="#">Healthy Living</a>
-                         <a class="dropdown-item menu-item" href="#">Humour</a>
-                         <a class="dropdown-item menu-item" href="#">Personal Development</a>
-                         <a class="dropdown-item menu-item" href="#">Romance</a>
-                         <a class="dropdown-item menu-item" href="#">Science and Technology</a>
-                         <a class="dropdown-item menu-item" href="#">Science Fiction</a>
-                         <a class="dropdown-item menu-item" href="#">Sports</a>
-                         <a class="dropdown-item menu-item" href="#">Travel</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Action and Adventure</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Autobiographies and Biographies</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Business and Economics</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Computing</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Healthy Living</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Humour</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Personal Development</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Romance</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Science and Technology</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Science Fiction</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Sports</a>
+                         <a class="dropdown-item menu-item" href="" ng-click="goToCategoriesPage()">Travel</a>
                      </div>
                     </div>
                 </div>
