Rating Dialog and homepage redirection

--- a/app/shared/directives/anonymousToolbar/anonymousToolbar.html
+++ b/app/shared/directives/anonymousToolbar/anonymousToolbar.html
@@ -3,7 +3,7 @@
     
             <div class="headerToolbar row">
                <div class="col-xs-3">
-                  <img id="bookboxlogo" src="/BookBox/BookBoxUX/assets/img/logos/bookbox_logo2.png" class="img-responsive" width="134" height="42" >
+                  <a href="/BookBox/BookBoxUX/#/"><img id="bookboxlogo" src="/BookBox/BookBoxUX/assets/img/logos/bookbox_logo2.png" class="img-responsive" width="134" height="42" ></a>
               </div>
                 <div class="col-xs-1 ml-auto">
                     <div class="dropdown">  
