--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             <script src="/BookBox/BookBoxUX/app/shared/directives/anonymousToolbar/anonymousToolbarDirective.js"></script>
             <script src="/BookBox/BookBoxUX/app/shared/directives/anonymousToolbar/anonymousToolBarDirectiveController.js"></script>
             <script src="/BookBox/BookBoxUX/app/shared/directives/anonymousToolbar/anonymousToolbarService.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/userRatingDialog/userRatingDialogController.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/userRatingDialog/userRatingDialogService.js"></script>
           <style>
           </style>
 
