--- a/app/shared/directives/anonymousToolbar/anonymousToolbar.html
+++ b/app/shared/directives/anonymousToolbar/anonymousToolbar.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="col-xs-1">
-                    <a id="signIn" href="#" class="float-right bb-header-hyperlinks">Sign In</a>    
+                    <a id="signIn" href="/BookBox/BookBoxUX/#/login" class="float-right bb-header-hyperlinks">Sign In</a>    
                 </div>
 
             </div>
