--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
             <script src="/BookBox/BookBoxUX/app/shared/directives/anonymousToolbar/anonymousToolbarService.js"></script>
             <script src="/BookBox/BookBoxUX/app/components/userRatingDialog/userRatingDialogController.js"></script>
             <script src="/BookBox/BookBoxUX/app/components/userRatingDialog/userRatingDialogService.js"></script>
+             <script src="/BookBox/BookBoxUX/app/components/loginPage/loginPageController.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/loginPage/loginPageService.js"></script>
           <style>
           </style>
 
