Login and Sign Up Pages

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
             <!--<link href="/BookBox/BookBoxUX/assets/css/bootstrap.css" rel="stylesheet" type="text/css" /> -->
+            <link href="https://unpkg.com/ionicons@4.5.9-1/dist/css/ionicons.min.css" rel="stylesheet">
             <link href="/BookBox/BookBoxUX/assets/css/bookboxglobal.css" rel="stylesheet" type="text/css" />
             <link href="/BookBox/BookBoxUX/assets/css/anonymousToolbar.css" rel="stylesheet" type="text/css" />
             <script src="/BookBox/BookBoxUX/app/app.module.js"></script>
@@ -55,6 +56,10 @@
             <script src="/BookBox/BookBoxUX/app/components/userRatingDialog/userRatingDialogService.js"></script>
              <script src="/BookBox/BookBoxUX/app/components/loginPage/loginPageController.js"></script>
             <script src="/BookBox/BookBoxUX/app/components/loginPage/loginPageService.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/loggedInHomePage/loggedInHomePageController.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/loggedInHomePage/loggedInHomePageService.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/signUpPage/signUpPageController.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/signUpPage/signUpPageService.js"></script>
           <style>
           </style>
 
