--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             <link href="/BookBox/BookBoxUX/assets/css/homePage.css" rel="stylesheet" type="text/css"/>
             <link href="/BookBox/BookBoxUX/assets/css/bookPage.css" rel="stylesheet" type="text/css"/>
             <link href="/BookBox/BookBoxUX/assets/css/categoryPage.css" rel="stylesheet" type="text/css"/>
+            <link href="/BookBox/BookBoxUX/assets/css/loginPage.css" rel="stylesheet" type="text/css"/>
+            <link href="/BookBox/BookBoxUX/assets/css/signUpPage.css" rel="stylesheet" type="text/css"/>
+            <link href="/BookBox/BookBoxUX/assets/css/ratingDialog.css" rel="stylesheet" type="text/css"/>
+            <link href="/BookBox/BookBoxUX/assets/css/planDetailDialog.css" rel="stylesheet" type="text/css"/>
             <!-- ----------------------------Custom CSS Ends--------------------------------------------------------->
             
             <!-- ----------------------------Custom Scripts--------------------------------------------------------->
