--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <link href="/BookBox/BookBoxUX/assets/css/signUpPage.css" rel="stylesheet" type="text/css"/>
             <link href="/BookBox/BookBoxUX/assets/css/ratingDialog.css" rel="stylesheet" type="text/css"/>
             <link href="/BookBox/BookBoxUX/assets/css/planDetailDialog.css" rel="stylesheet" type="text/css"/>
+            <link href="/BookBox/BookBoxUX/assets/css/searchBoxDirective.css" rel="stylesheet" type="text/css"/>
             <!-- ----------------------------Custom CSS Ends--------------------------------------------------------->
             
             <!-- ----------------------------Custom Scripts--------------------------------------------------------->
