Implemented NavBar directive

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <link href="/BookBox/BookBoxUX/assets/css/ratingDialog.css" rel="stylesheet" type="text/css"/>
             <link href="/BookBox/BookBoxUX/assets/css/planDetailDialog.css" rel="stylesheet" type="text/css"/>
             <link href="/BookBox/BookBoxUX/assets/css/searchBoxDirective.css" rel="stylesheet" type="text/css"/>
+            <link href="/BookBox/BookBoxUX/assets/css/loggedinToolbar.css" rel="stylesheet" type="text/css" />
+            <link href="/BookBox/BookBoxUX/assets/css/loggedInNavBar.css" rel="stylesheet" type="text/css" />
             <!-- ----------------------------Custom CSS Ends--------------------------------------------------------->
             
             <!-- ----------------------------Custom Scripts--------------------------------------------------------->
@@ -75,6 +77,12 @@
             <script src="/BookBox/BookBoxUX/app/components/loggedInHomePage/loggedInHomePageService.js"></script>
             <script src="/BookBox/BookBoxUX/app/components/signUpPage/signUpPageController.js"></script>
             <script src="/BookBox/BookBoxUX/app/components/signUpPage/signUpPageService.js"></script>
+            <script src="/BookBox/BookBoxUX/app/shared/directives/loggedinToolbar/loggedInToolbar.js"></script>
+            <script src="/BookBox/BookBoxUX/app/shared/directives/loggedinToolbar/loggedInToolbarController.js"></script>
+            <script src="/BookBox/BookBoxUX/app/shared/directives/loggedinToolbar/loggedInToolbarService.js"></script>
+            <script src="/BookBox/BookBoxUX/app/shared/directives/loggedInNavBar/loggedInNavBar.js"></script>
+            <script src="/BookBox/BookBoxUX/app/shared/directives/loggedInNavBar/loggedInNavBarController.js"></script>
+            <script src="/BookBox/BookBoxUX/app/shared/directives/loggedInNavBar/loggedInNavBarService.js"></script>
             
             <!-- ----------------------------Custom Scripts Ends--------------------------------------------------------->
           <style>
