Logged In home page almost done

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </style>
 
         </head>
-        <body ng-app="bookBoxApp">
+        <body ng-app="bookBoxApp" style="height: auto">
             <div ng-view></div>
         </body>
     </html>
