--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
             <script src="/BookBox/BookBoxUX/app/shared/directives/loggedInNavBar/loggedInNavBar.js"></script>
             <script src="/BookBox/BookBoxUX/app/shared/directives/loggedInNavBar/loggedInNavBarController.js"></script>
             <script src="/BookBox/BookBoxUX/app/shared/directives/loggedInNavBar/loggedInNavBarService.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/loggedInBookPage/loggedInBookPageController.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/loggedInBookPage/loggedInBookPageService.js"></script>
             
             <!-- ----------------------------Custom Scripts Ends--------------------------------------------------------->
           <style>
