User-Rating dialog and Category listing page

--- a/app/shared/directives/loggedInNavBar/loggedInNavBar.html
+++ b/app/shared/directives/loggedInNavBar/loggedInNavBar.html
@@ -1,7 +1,7 @@
 <nav id="sidenav">
             <ul class="list">
-                <li ng-class="{ 'selected' : currentSelection == 0 }"> <a href="" ><img src="/BookBox/BookBoxUX/assets/img/icons/home.png" width="32" height="32"/><span class="list-label">Home</span></a> </li>
-                <li ng-class="{ 'selected' : currentSelection == 1 }">  <a href="" ><img src="/BookBox/BookBoxUX/assets/img/icons/Categories.png" width="32" height="32"/><span class="list-label">Categories</span></a> </li>
+                <li ng-class="{ 'selected' : currentSelection == 0 }"> <a href="/BookBox/BookBoxUX/#/loggedin" ><img src="/BookBox/BookBoxUX/assets/img/icons/home.png" width="32" height="32"/><span class="list-label">Home</span></a> </li>
+                <li ng-class="{ 'selected' : currentSelection == 1 }">  <a href="/BookBox/BookBoxUX/#/categoryListing" ><img src="/BookBox/BookBoxUX/assets/img/icons/Categories.png" width="32" height="32"/><span class="list-label">Categories</span></a> </li>
                 <li ng-class="{ 'selected' : currentSelection == 2 }"> <a href="" ><img src="/BookBox/BookBoxUX/assets/img/icons/playlist.png" width="32" height="32"/><span class="list-label">Playlists</span></a> </li>
                 <li ng-class="{ 'selected' : currentSelection == 3 }"><a href="" ><img src="/BookBox/BookBoxUX/assets/img/icons/history.png" width="32" height="32"/><span class="list-label">History</span></a> </li>
                 <li ng-class="{ 'selected' : currentSelection == 4 }"><a href="" ><img src="/BookBox/BookBoxUX/assets/img/icons/settings.png" width="32" height="32"/><span class="list-label">Settings</span></a> </li>
