--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
             <script src="/BookBox/BookBoxUX/app/shared/directives/loggedInNavBar/loggedInNavBarService.js"></script>
             <script src="/BookBox/BookBoxUX/app/components/loggedInBookPage/loggedInBookPageController.js"></script>
             <script src="/BookBox/BookBoxUX/app/components/loggedInBookPage/loggedInBookPageService.js"></script>
-            
+            <script src="/BookBox/BookBoxUX/app/components/categoryListingPage/categoryListingPageController.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/categoryListingPage/categoryListingPageService.js"></script>
+
+
             <!-- ----------------------------Custom Scripts Ends--------------------------------------------------------->
           <style>
           </style>
