--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@
             <script src="/BookBox/BookBoxUX/app/shared/directives/addToPlaylist/addToPlaylistDirective.js"></script>
             <script src="/BookBox/BookBoxUX/app/shared/directives/addToPlaylist/addToPlaylistDirectiveController.js"></script>
             <script src="/BookBox/BookBoxUX/app/shared/directives/addToPlaylist/addToPlaylistService.js"></script>
-            
+            <script src="/BookBox/BookBoxUX/app/components/playlists/playlistsController.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/playlists/playlistsService.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/history/historyController.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/history/historyService.js"></script>
+           
             <!-- ----------------------------Custom Scripts Ends--------------------------------------------------------->
           <style>
           </style>
