Settings and User edit

--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
             <script src="/BookBox/BookBoxUX/app/components/playlists/playlistsService.js"></script>
             <script src="/BookBox/BookBoxUX/app/components/history/historyController.js"></script>
             <script src="/BookBox/BookBoxUX/app/components/history/historyService.js"></script>
-           
+            <script src="/BookBox/BookBoxUX/app/components/settings/settingsController.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/settings/settingsService.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/editUser/editUserController.js"></script>
+            <script src="/BookBox/BookBoxUX/app/components/editUser/editUserService.js"></script>
             <!-- ----------------------------Custom Scripts Ends--------------------------------------------------------->
           <style>
           </style>
