--- a/app/shared/directives/loggedInNavBar/loggedInNavBar.html
+++ b/app/shared/directives/loggedInNavBar/loggedInNavBar.html
@@ -4,7 +4,7 @@
                 <li ng-class="{ 'selected' : currentSelection == 1 }">  <a href="/BookBox/BookBoxUX/#/categoryListing" ><img src="/BookBox/BookBoxUX/assets/img/icons/Categories.png" width="32" height="32"/><span class="list-label">Categories</span></a> </li>
                 <li ng-class="{ 'selected' : currentSelection == 2 }"> <a href="/BookBox/BookBoxUX/#/playlists" ><img src="/BookBox/BookBoxUX/assets/img/icons/playlist.png" width="32" height="32"/><span class="list-label">Playlists</span></a> </li>
                 <li ng-class="{ 'selected' : currentSelection == 3 }"><a href="/BookBox/BookBoxUX/#/history" ><img src="/BookBox/BookBoxUX/assets/img/icons/history.png" width="32" height="32"/><span class="list-label">History</span></a> </li>
-                <li ng-class="{ 'selected' : currentSelection == 4 }"><a href="" ><img src="/BookBox/BookBoxUX/assets/img/icons/settings.png" width="32" height="32"/><span class="list-label">Settings</span></a> </li>
+                <li ng-class="{ 'selected' : currentSelection == 4 }"><a href="/BookBox/BookBoxUX/#/settings" ><img src="/BookBox/BookBoxUX/assets/img/icons/settings.png" width="32" height="32"/><span class="list-label">Settings</span></a> </li>
                 <li ng-class="{ 'selected' : currentSelection == 5 }"><a href="" ><img src="/BookBox/BookBoxUX/assets/img/icons/billing.png" width="32" height="32"/><span class="list-label">Billing</span></a> </li>
                 <li><span><a href="" ><img src="/BookBox/BookBoxUX/assets/img/icons/signOut.png" width="32" height="32"/><span class="list-label">Sign Out</span></a></span></li>
             </ul>
